# truthful_counterfactuals

./: .gitignore  AGENTS.md  DEVELOP.rst  LICENSE  README.rst  pyproject.toml
tests/: test_metrics.py  test_mixins.py  test_models.py  test_testing.py  test_uncertainty.py  test_util.py  test_visualization.py
truthful_counterfactuals/: cli.py  data.py  metrics.py  mixins.py  models.py  testing.py  uncertainty.py  utils.py  visualization.py
truthful_counterfactuals/experiments/: AGENTS.md  README.md  _results_ex_01.tex  _results_ex_02.tex  _results_ex_03.tex  _results_ex_04.tex  _results_ex_05.tex  _slurm_ex_01.sh  _slurm_ex_02.sh  _slurm_ex_03.sh  _slurm_ex_04.sh  _slurm_ex_05.sh  analyze_ex_01.ipynb  analyze_ex_02.ipynb  analyze_ex_03.ipynb  analyze_ex_04.ipynb  analyze_ex_05.ipynb  batch.sh  counterfactual_truthfulness.py  counterfactual_truthfulness__ens.py  counterfactual_truthfulness__ens_mve.py  counterfactual_truthfulness__mve.py  counterfactual_truthfulness__rand.py  generate_logp_dataset.py  quantify_uncertainty.py  quantify_uncertainty__ens.py  quantify_uncertainty__ens_grad.py  quantify_uncertainty__ens_mve.py  quantify_uncertainty__ens_mve__aqsoldb.py  quantify_uncertainty__ens_mve__compas.py  quantify_uncertainty__ens_mve__lipop.py  quantify_uncertainty__ens_mve__qm9.py  quantify_uncertainty__ens_mve__tadf.py  quantify_uncertainty__evidential.py  quantify_uncertainty__mve.py  quantify_uncertainty__rand.py  quantify_uncertainty__rep_ens.py  quantify_uncertainty__swag.py  quantify_uncertainty__tscore.py  quantify_uncertainty__tscore__euc.py  (+3 more)
(+13 files in other folders)
